--- a/src/stylus/Description.scss
+++ b/src/stylus/Description.scss
@@ -2,41 +2,44 @@
 @import "Params.scss";
     
 .description {
-  width: 100%;
+  width: 90%;
   margin: 10px auto;
 
 }
 .fancybox {
-    width: 826px;
+    width: 500px;
     height: auto;
     position: fixed;
     top: 20px;
-    left: 538px;
-    opacity: 1; 
+    margin-left: -250px;
+    left: 50%;
+    opacity: 1;
     pointer-events: none;
 }
 .wrapper__modal-dialog {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 3;
-
-  background: rgba(0, 0, 0, 0.8); 
+      position: fixed;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      z-index: 3;
+      background: rgba(0, 0, 0, 0.8); 
 }
 .breadcrumb li:after {
-  padding: 0px 5px;
-  content: "/";}
+      padding: 0px 5px;
+      content: "/";
+}
 .slider{
-  margin-top: 20px;
+  margin: 20px;
   width: 31%;
   height: 25%;
-  min-width: 200px; }
+  min-width: 200px; 
+}
 .slider-img__big-img {
     width: 100%;
     min-width: 200px;
-    height: 280px;}
+    height: 280px;
+}
 .big-img__positioner {
   width: 70%;
   height: 100%;}
@@ -44,25 +47,30 @@
   vertical-align: middle;
   width: 50px;
   height: 50px;
-  min-width: 28px; }
+  min-width: 28px; 
+}
 .slider-img__min-img {
   width: 100%;
-  margin-bottom: 10px; }
+  margin-bottom: 10px; 
+}
 .min-img__arrow {
   top: 20px;
   position: relative;
   width: 0;
   height: 0;
-  border: 25px solid transparent; }
+  border: 25px solid transparent; 
+}
 .min-img img:nth-child(2){
     border: 1px solid blue;
 }
 .min-img__arrow--left {
   border-right-color: lightskyblue;
-  border-left: 0; }
+  border-left: 0; 
+}
 .min-img__arrow--right {
   border-left-color: lightskyblue;
-  border-right: 0; }
+  border-right: 0;
+}
 .product-description__layout-description {
   width: 100%;
   margin-top: 10px;
@@ -71,51 +79,67 @@
   background: url("../img/Symbol/rating.png") repeat-x;
   width: 80px;
   height: 14px;
-  margin-left: 10px; }
+  margin-left: 10px; 
+}
 .img-star__raiting {
   background: url("../img/Symbol/rating-fill.png") repeat-x;
   width: 55px;
-  height: 14px; }
+  height: 14px; 
+}
 .layout-description__label {
   margin-top: 30px;
-  margin-left: 7px; }
+  margin-left: 7px; 
+}
 .layout-description__quantiti {
-  margin-top: 5px; }
+  margin-top: 5px; 
+}
 .layout-description__add-cart {
   float: right;
   margin-bottom: 20px;
-    margin-top: -40px;}
+    margin-top: -40px;
+}
 .add-cart__btn {
-    @include order-btn; }
+    @include order-btn; 
+}
 
 .modal-dialog--target:target {
   display: block;
-  pointer-events: auto; }
+  pointer-events: auto; 
+}
 .breadcrumb {
   list-style-type: none;
  }
 .big-img {
-  text-align: center; }
+  text-align: center; 
+}
 .min-img {
-  text-align: center; }
+  text-align: center; 
+}
 .add-cart {
-  font-size: 30px; }
+  font-size: 30px; 
+}
         /*Social*/
 .layout-description__lineSocial {
-    width: 16%;
+    width: 220px;
     clear: both;
-    margin: 0 auto; }
+    margin: 0 auto; 
+}
 .lineSocial__line-social {
   background-image: url("../img/Symbol/icosocial.png");
   background-repeat: repeat-x;
   width: 52px;
-  height: 52px; }
+  height: 52px; 
+}
 .lineSocial__twitter {
-  background-position: 3%; }
+  background-position: 3%; 
+}
 .lineSocial__vkontakte {
-  background-position: 14.6%; }
+  background-position: 14.6%; 
+}
 .lineSocial__facebook {
-  background-position: 26.4%; }
+  background-position: 26.4%; 
+}
 .lineSocial__instagram {
-  background-position: 38.2%; }
+  background-position: 38.2%; 
+}
 
