--- a/src/stylus/goods.scss
+++ b/src/stylus/goods.scss
@@ -1,6 +1,6 @@
 .goods {	
 	width: 100%;	
-    margin-bottom: 20px;		
+    margin-bottom: 20px;	
 	
 	&__view {
 		display: none;
@@ -13,13 +13,14 @@
 	&__folder {
 		display: flex;
 		padding-left: 0;
-		flex-flow: row wrap;
+		flex-flow: column wrap;
 		list-style-type: none;
+		align-items: center;
 		justify-content: center;
 	}
 	
 	&__unit {
-		width: 20%;
+		width: 70%;
 		text-align: center;
 		margin-bottom: 20px;
 	}
@@ -177,9 +178,43 @@
 	}
 }
 
+@media screen and (min-width:480px) and (max-width: 800px) {
+	.goods  {
+		&__folder {			
+			flex-direction: row;
+		}
+		
+		&__unit {			
+			flex-basis: 250px;
+		}
+	}
+}
+
+@media screen and (min-width:800px) and (max-width: 1100px) {
+	.goods {
+		&__folder {			
+			flex-direction: row;
+		}
+		
+		&__unit {			
+			flex-basis: 250px;
+		}
+	}
+	
+}
+
 @media screen and (min-width: 1100px) {
 	.goods {
 		width: 88%;
+		
+		&__folder {			
+			flex-direction: row;
+		}
+		
+		&__unit {			
+			flex-basis: 250px;
+		}
+		
 		&__view {
 			display: block;
     		height: 20px;
