--- a/src/stylus/app.scss
+++ b/src/stylus/app.scss
@@ -28,6 +28,7 @@ html, body {
 @import "navigation.scss";
 @import "homePage.scss";
 @import "goods.scss";
+@import "login.scss";
 @import "cart.scss";
 @import "Pay.scss";
 @import "Description.scss";
