--- a/src/stylus/cart.scss
+++ b/src/stylus/cart.scss
@@ -13,6 +13,7 @@
     &__item {        
         width: 95%;
         margin: auto;
+		margin-bottom: 10px;
     }
     &__totalbar {       
         width: 100%;
