--- a/src/stylus/Description.scss
+++ b/src/stylus/Description.scss
@@ -2,7 +2,7 @@
 @import "Params.scss";
     
 .description {
-  width: 90%;
+  width: 100%;
   margin: 10px auto;
 
 }
@@ -48,6 +48,7 @@
   width: 50px;
   height: 50px;
   min-width: 28px; 
+    border-radius: 10px;
 }
 .slider-img__min-img {
   width: 100%;
